--- a/SoftUni HTML & CSS/03. 2023.05.16. CSS & Typography/07_The-Making-Of-A-CSS-Font/styles.css
+++ b/SoftUni HTML & CSS/03. 2023.05.16. CSS & Typography/07_The-Making-Of-A-CSS-Font/styles.css
@@ -1,1 +1,36 @@
-/* TODO: style the html */
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orienta&display=swap');
+
+body{
+    background-color: darkred;
+    text-align: center;
+}
+
+
+h1 {
+    text-align: center;
+    font-family: 'Righteous', cursive ;
+    font-size: 45px; 
+    font-weight: normal;
+    line-height: 60px;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+h2 {
+    font-size: 30px;
+    line-height: 50px;
+    letter-spacing: -1px;
+    color:#DFBF84;
+    text-transform: uppercase;
+    text-align: center;
+
+}
+
+p {
+    font-family: 'Orienta', sans-serif;
+    font-size: 16px;
+    line-height: 24px;
+    color:#f6f6f6;
+    text-align: center;
+}
