--- a/SoftUni HTML & CSS/03. 2023.05.16. CSS & Typography/09_Icon-Font-Buttons/styles.css
+++ b/SoftUni HTML & CSS/03. 2023.05.16. CSS & Typography/09_Icon-Font-Buttons/styles.css
@@ -1,1 +1,36 @@
-/* TODO: style the html */
+@import url('https://use.fontawesome.com/releases/v5.6.3/css/all.css');
+
+
+body {
+    font-family: Arial, serif;
+    font-size: 18px;
+    line-height: 3;
+
+}
+
+a {
+    text-decoration: none;
+    color: #fff;
+    border-radius: 5.40px;
+    padding-top: 12.6px;
+    padding-bottom: 12.6px;
+    padding-left: 27px;
+    padding-right:27px;
+}
+
+i {
+    padding-right: 5.40px;
+}
+
+a:hover {
+    color: #eee;
+}
+
+.green {
+    background-color: green;
+}
+
+.orange {
+    background-color: orange;
+}
+
