--- a/SoftUni HTML & CSS/03. 2023.05.16. CSS & Typography/10_Icon-Font-List/styles.css
+++ b/SoftUni HTML & CSS/03. 2023.05.16. CSS & Typography/10_Icon-Font-List/styles.css
@@ -1,1 +1,28 @@
-/* TODO: style the html */
+@import url('https://use.fontawesome.com/releases/v5.6.3/css/all.css');
+
+
+body {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 18px;
+    line-height: 1.5;
+}
+
+ul {
+    list-style-type: none;
+}
+
+i {
+    font-size: 25px;
+}
+
+ul.check i {
+    color: #2fcc71;
+}
+
+ul.star i {
+    color:coral;
+}
+
+ul.contact i {
+    color: #3498da;
+}
