--- a/SoftUni HTML & CSS/04. 2023.05.23. CSS Box Model/05_Blog-Article/styles.css
+++ b/SoftUni HTML & CSS/04. 2023.05.23. CSS Box Model/05_Blog-Article/styles.css
@@ -27,7 +27,7 @@ p {
 div {
 
     margin-bottom: 30px;
-    border: 2px solid #fff;
+    border-top: 2px solid #fff;
     position: relative;
     top: 20px;
 }
