--- a/SoftUni HTML & CSS/06. 2023.06.06. Grid and Positioning/02_Position-playground/style.css
+++ b/SoftUni HTML & CSS/06. 2023.06.06. Grid and Positioning/02_Position-playground/style.css
@@ -1,56 +1,41 @@
-
-
 body {
-  
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: repeat(2, 600px);
-    grid-template-areas: 
-
-    "first"
-    "second" ; 
-
+    width: 100%;
 }
-    
+
+
 div {
     position: relative;
-   
+    height: 50vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
 }
-.card {
-    display:block;
+
+section.card {
+    display: block;
     position: absolute;
     width: 33.33%;
+    max-height: fit-content;
 }
 
 img {
     display: block;
-    width:100%;
+    width: 100%;
     height: 100%;
     object-fit: cover;
-   
-}
 
-.viewport:nth-child(1) {
-    grid-area: first;
-    background: rgb(22,123,208);
-   background: linear-gradient(90deg, rgba(22,123,208,1) 9%, rgba(97,215,176,1) 59%, rgba(12,227,156,1) 100%)
-}
-
-.viewport:nth-child(2) {
-    grid-area: second;
-    background: rgb(208,22,82);
-background: linear-gradient(90deg, rgba(208,22,82,1) 9%, rgba(215,132,97,1) 59%, rgba(227,113,12,1) 100%)
 }
 
 .first {
-    top: 33.33%;
-    left: 33.33%;
-    right: 33.33%;
+    grid-area: first;
+    background: rgb(22, 123, 208);
+    background: linear-gradient(90deg, rgba(22, 123, 208, 1) 9%, rgba(97, 215, 176, 1) 59%, rgba(12, 227, 156, 1) 100%)
 }
 
 .second {
-    top: 10%;
-    left: 33.33%;
-    right:33.33%;
-    bottom: 10%
+    grid-area: second;
+    background: rgb(208, 22, 82);
+    background: linear-gradient(90deg, rgba(208, 22, 82, 1) 9%, rgba(215, 132, 97, 1) 59%, rgba(227, 113, 12, 1) 100%)
 }
+
