--- a/SoftUni HTML & CSS/06. 2023.06.06. Grid and Positioning/07_Interior-Design-Studio/styles.css
+++ b/SoftUni HTML & CSS/06. 2023.06.06. Grid and Positioning/07_Interior-Design-Studio/styles.css
@@ -1,1 +1,23 @@
-//TODO
+
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+
+body {
+    display:grid;
+    position:relative;
+    
+}
+
+h1 {
+    position:absolute;
+    top: 60px;
+    left:180px;
+    color: antiquewhite;
+    text-shadow: 1px 1px 20px black;
+}
+
