--- a/SoftUni HTML & CSS/06. 2023.06.06. Grid and Positioning/08_Jewellery-Website/styles.css
+++ b/SoftUni HTML & CSS/06. 2023.06.06. Grid and Positioning/08_Jewellery-Website/styles.css
@@ -1,1 +1,32 @@
-/* TODO: style the html */
+
+*{
+    box-sizing: border-box;
+    margin:0;
+    padding:0;
+}
+
+section {
+    position:absolute;
+    top:250px;
+    left:180px
+
+}
+
+
+h3 {
+    font-size: 16px;
+    
+}
+
+span {
+    padding-left: 3px;
+   color: gray;
+     font-size: 14px ;
+}
+
+div {
+    position:relative;
+    bottom:50px;
+    left:8px;
+}
+
